Fix graph layer clipping

--- a/src/index.css
+++ b/src/index.css
@@ -469,9 +469,10 @@ select {
   z-index: 2;
   width: 0;
   height: 0;
+  overflow: visible;
   transform-origin: 0 0;
   will-change: transform;
-  contain: layout style paint;
+  contain: layout style;
 }
 
 .graph-connections {
